--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.5.0",
+    "serve": "^14.2.4",
     "text-encoding": "^0.7.0",
     "util": "^0.12.5",
     "zustand": "^5.0.3"
